# sport-betting-recommender-s

./: main.py  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: processing_config.py  settings.py
data/: advanced_processor.py  data_loader.py  database_connector.py
helper/: logging.py
models/: __init__.py  model_config.py  models.py  train.py
outputs/artifacts/: final_training_report.json  preprocessor_metadata.json  training_results.json  training_summary.txt
outputs/artifacts/preprocessor/: hierarchical_data_sample.parquet  processing_artifacts.pkl  user_item_matrix.pkl
outputs/models/contextual_bandit/: contextual_bandit_model.joblib
outputs/models/contextual_catboost/: contextual_catboost_model.joblib
outputs/models/reinforcement_learning/: reinforcement_learning_model.joblib
tests/: a.py  data_processor.py
tests/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
tests/catboost_info/learn/: events.out.tfevents
tests/catboost_info/test/: events.out.tfevents
tests/mlruns/0/: meta.yaml
tests/mlruns/817978148144270768/: meta.yaml
tests/mlruns/817978148144270768/11723d5eab6143fc8edba6880bd219fd/: meta.yaml
tests/mlruns/817978148144270768/541929b4c6554899bcc8cca9eda1db7b/: meta.yaml
tests/models/: collaborative_filtering_model.pkl
utils/: evaluation.py  model_manager.py
(+9 files in other folders)
